--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ button {
     background-color: black;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-gap: 20px;
 }
 
 .img-box {
@@ -53,6 +53,7 @@ button {
 .image-item {
     border: 1px solid rgba(85, 85, 85, 0.418);
     display: flex;
+    cursor: pointer;
 }
 
 .image-item img {
@@ -73,13 +74,14 @@ button {
 }
 
 .modal {
-    height: 300px;
-    width: 600px;
-    background-color: rgb(0, 0, 0);
+    height: 400px;
+    width: 850px;
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     color: rgb(255, 255, 255);
     position: fixed;
-    top: 400px;
-    left: 630px;
+    top: 350px;
+    left: 520px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,9 +92,45 @@ button {
 .heroes {
     font-weight: 400;
     font-size: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.heroes img {
+    width: 50%;
+    height: 60%;
 }
 
 .champ {
-    color: red;
-    font-size: 15px;
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    align-self: center;
+    width: 200px;
+    text-align: center;
+}
+
+.HeroProfile {
+    display: flex;
+    flex-direction: column;
+    margin-left: 4%;
+    justify-content: center;
+    text-align: start;
+    gap: 5px;
+}
+
+.HeroProfile2 {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-right: 4%;
+    text-align: start;
+    gap: 5px;
+}
+
+
+.atributes {
+    display: none;
 }
