--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ button {
     height: 400px;
     width: 850px;
     background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgb(17, 2, 5) 100%);
     color: rgb(255, 255, 255);
     position: fixed;
     top: 350px;
